--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuetify-material-dashboard",
+  "name": "tbo",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "chartist": "0.11.0",
+    "css-loader": "^2.1.0",
     "leaflet": "^1.4.0",
     "leaflet.markercluster": "^1.4.1",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "vue": "^2.5.17",
     "vue-chartist": "^2.1.2",
     "vue-meta": "^1.5.2",
